--- a/stylesheet.css
+++ b/stylesheet.css
@@ -51,7 +51,7 @@ footer {
 }
 /* Rij 4 */
 #cell_4_1 {
-    background-color: rgb(48, 56, 49)d;
+    background-color: rgb(48, 56, 49);
 }
 #cell_4_2 {
     background-color: rgb(154, 220, 224);
